--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,46 @@
+fai (4.0) unstable; urgency=low
+
+  - New script names:
+    faimond     -> fai-monitor
+    faimond-gui -> fai-monitor-gui
+    make-fai-nfsroot -> fai-make-nfsroot
+    disk-info   -> fai-disk-info
+  - make-fai-nfsroot.conf renamed to nfsroot.conf
+  - task prepareapt renamed to repository
+  - task mirror was removed and is now part of task repository
+  - add task tests to action dirinstall and softupdate
+  - old tool setup_harddisks removed. Use setup-storage instead
+  - new script fai-nfsroot2image
+  - new script fai-new-mac
+  - new variables $FAI_BASEFILEURL adds support for receiving basefile via
+    ftp and http
+  - multicore support in fai-make-nfsroot (rm and xz compression is done
+    in the background
+  - huge speedup in fai-make-nfsroot using ramdisk (package installation
+    is twice as fast)
+  - ifclass new options -a and -o
+  - fai-make-nfsroot new option -a, -g, -l, remove -U, -r
+  - fai-make-nfsroot dracut is now the default initramfs creator inside
+    the nfsroot which replaces live-boot and initramfs-tools
+  - fai-monitor-gui: add option -s
+  - *.asc files are loaded by class names
+  - the variable $FAI does not need to be set in fai.conf, since all
+    scripts use the default value of /var/lib/fai/config
+  - add support for python, ruby and zsh scripts to fai-do-scripts
+  - fai-chboot must specify the config space URL
+  - fai-chboot: new option -E
+  - FAI supports NFS v4 using dracut
+  - install apt keys from /etc/fai/apt/keys into nfsroot
+  - fcopy can copy symlinks using -H
+  - FAI can work without any NFS access
+  - action softupdates now calls task repository
+  - add dracut support
+  - new FAI_FLAG halt
+  - add variable AINSL_TARGET
+  - new log file fai-monitor.log on the install client
+
+ -- Thomas Lange <lange@debian.org>  Tue, 10 Apr 2012 11:48:33 +0200
+
 fai (3.4.4) unstable; urgency=low
 
   - This stable release is targeted towards Debian/squeeze but continues
@@ -30,7 +73,7 @@ fai (3.3) unstable; urgency=low
   - files named package_config/*.asc are added to the list of apt keys
   - cvs, bootpc, expect and mdetect are not installed by default into the
     nfsroot
-  
+
  -- Thomas Lange <lange@debian.org>  Tue, 03 Nov 2009 09:35:06 +0100
 
 fai (3.2.8) unstable; urgency=low
@@ -66,7 +109,7 @@ fai (3.2) unstable; urgency=low
 fai (3.1) unstable; urgency=medium
 
   - rename action dirinst to dirinstall
-  - fai: add option -u,--hostname 
+  - fai: add option -u,--hostname
 
  -- Thomas Lange <lange@debian.org>  Wed, 18 Oct 2006 16:18:36 +0200
 
@@ -88,7 +131,7 @@ fai (3.0) unstable; urgency=low
     for the nfsroot
   - changes in variables
     remove FAI_REMOTESH and FAI_REMOTECP from fai.conf,
-     use FAI_LOGPROTO instead 
+     use FAI_LOGPROTO instead
     remove $installserver and $mirrorhost in fai.conf
     replace FAI_LOCATION by FAI_CONFIG_SRC, use default if undefined:
       "nfs://`hostname`$FAI_CONFIGDIR"
@@ -211,7 +254,7 @@ fai (2.8.1) unstable; urgency=low
   - added german and french translation of the debconf templates
   - task sysinfo mounts the local partitions read only
   - move some classes from 10-base-classes to the new script
-    50-host-classes  
+    50-host-classes
   - fixed a lot of typos in the fai guide
 
  -- Thomas Lange <lange@debian.org>  Sat, 30 Apr 2005 21:20:53 +0200
@@ -289,7 +332,7 @@ fai (2.6.3) unstable; urgency=high
   - fai-setup: add option -e
   - make-fai-nfsroot: add option -K
   - add xfs support into the nfsroot
-  - define kernel parameters using $kappend 
+  - define kernel parameters using $kappend
 
  -- Thomas Lange <lange@debian.org>  Mon, 13 Sep 2004 18:40:36 +0200
 
@@ -347,7 +390,7 @@ fai (2.5.4) unstable; urgency=low
 
   - fix bug in make-fai-bootfloppy when using -f
   - make-fai-bootfloppy: added option -i that creates a bootable
-    ISO9960 cdrom image 
+    ISO9960 cdrom image
   - some sparc and PowerPC adjustments
 
  -- Thomas Lange <lange@debian.org>  Thu, 26 Feb 2004 17:07:31 +0100
@@ -393,7 +436,7 @@ fai (2.5.1) unstable; urgency=low
 
   - minor bug fixes
   - added chapter to the fai guide how to receive the configuration
-    space using CVS 
+    space using CVS
   - initrd support when booting new kernel via network
 
  -- Thomas Lange <lange@debian.org>  Fri, 10 Oct 2003 14:58:16 +0200
@@ -437,7 +480,7 @@ fai (2.4.1) unstable; urgency=low
   - add FAI_BOOT to fai.conf; the list of boot protocols to set
     up (boot or dhcp or both)
   - DHCP install kernel file /boot/fai/installkernel renamed to
-    vmlinuz-install 
+    vmlinuz-install
   - new script fai-do-scripts; include the functions from do_script
     and task_configure, this makes the Solaris port easier
   - some bug fixes
@@ -556,7 +599,7 @@ fai (2.3) unstable; urgency=low
   - temporary files are stored to $LOGDIR (default to /tmp/fai/),
     can be set in fai.conf using mktemp if desired
   - log files for every new run are stored in a separate directory,
-    last-$FAI_ACTION is pointing to the last log directory 
+    last-$FAI_ACTION is pointing to the last log directory
   - if a task is skipped, also all its hooks are skipped
   - uname -s in uppercase is also a default class
   - all class/S[0-9]*.source scripts are sourced
@@ -583,7 +626,7 @@ fai (2.3) unstable; urgency=low
     more space left for the kernel image), new option -s
   - bootpc and dhcp request will use only active network devices
     ($netdevices_up determined by netdevice_info()) by default,
-    which can be overwritten with $netdevices 
+    which can be overwritten with $netdevices
   - add a hint how to set up the kernel automounter for scratch
     partitions
   - fcopy skips CVS directories, executes postinst script if file
@@ -654,7 +697,7 @@ fai (2.2) unstable; urgency=low
     installation process
   - hooks can define classes by writing class names to
     /tmp/additional-classes and variable by writing line to
-    /tmp/additional.var 
+    /tmp/additional.var
   - new hooks/tasks added
   - classes and variables are now defined in the very beginning
     before task_action is called and $FAI_ACTION is evaluated
