--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+fai (4.3) unstable; urgency=low
+
+  * add btrfs support to setup-storage
+
+ -- Thomas Lange <lange@debian.org>  Mon, 06 Oct 2014 10:33:21 +0200
+
+fai (4.2) unstable; urgency=low
+
+  - fai-cd now builds a hybrid ISO image
+
+ -- Thomas Lange <lange@debian.org>  Fri, 23 May 2014 13:46:47 +0200
+
 fai (4.0) unstable; urgency=low
 
   - New script names:
