--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+fai (5.2) unstable; urgency=low
+
+  * new command fai-diskimage creates bootable disk images for your VM
+
+ -- Thomas Lange <lange@debian.org>  Fri, 30 Sep 2016 19:33:47 +0200
+
 fai (5.0) unstable; urgency=low
 
   * major rewrite of the FAI guide
@@ -20,7 +26,7 @@ fai (5.0) unstable; urgency=low
   * new command fai-mk-network for setting up different test networks
   * fai-cd: no networking for the rescue boot entry by default
 
- -- Thomas Lange <lange@debian.org>  Wed, 18 Nov 2015 14:12:06 +0100
+ -- Thomas Lange <lange@debian.org>  Fri, 30 Sep 2016 15:16:31 +0200
 
 fai (4.3) unstable; urgency=low
 
