--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+fai (5.4) unstable; urgency=low
+
+  * FAI can now build cross-architecture disk images and chroot
+    environments for foreign architectures
+  * Add support for eMMC storages
+  * Disk images can use LVM partitions even if the host also uses LVM
+  * Use http://deb.debian.org as default for Debian package repositories
+
+ -- Thomas Lange <lange@debian.org>  Tue, 26 Sep 2017 14:57:00 +0200
+
 fai (5.2) unstable; urgency=low
 
   * new command fai-diskimage creates bootable disk images for your VM
