--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+fai (5.5) unstable; urgency=low
+
+  * New option -S in fcopy for variable substitution, which may replace
+    your preinst scripts
+  * Get rid of the need to have aptitude installed
+  * Change order of package commands in install_packages, aptitude is now
+    called after apt-get
+
+ -- Thomas Lange <lange@debian.org>  Thu, 19 Oct 2017 22:47:20 +0200
+
 fai (5.4) unstable; urgency=low
 
   * FAI can now build cross-architecture disk images and chroot
