--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+fai (5.6) unstable; urgency=low
+
+  * When installing the package fai-server, use the repository
+    from fai-project.org by default for building the nfsroot
+
+ -- Thomas Lange <lange@debian.org>  Wed, 28 Feb 2018 11:48:16 +0100
+
+fai (5.5.4) unstable; urgency=low
+
+  * New option -P for fai-make-nfsroot also preserves the ssh host
+    keys
+  * fai-diskimage: add support for raw.xz and raw.zst
+
+ -- Thomas Lange <lange@debian.org>  Fri, 23 Feb 2018 13:08:40 +0100
+
 fai (5.5) unstable; urgency=low
 
   * New option -S in fcopy for variable substitution, which may replace
