--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+fai (5.7) unstable; urgency=low
+
+  * The config examples are now in a separate git repo. See README for
+    more infos
+  * Add support for diskless clients in setup-storage
+  * Ubuntu installation now default to 18.04 LTS aka Bionic release
+
+ -- Thomas Lange <lange@debian.org>  Thu, 31 May 2018 22:41:20 +0200
+
 fai (5.6) unstable; urgency=low
 
   * When installing the package fai-server, use the repository
