--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+fai (5.8) unstable; urgency=low
+
+  * fcopy: change the precedence of mode handling
+
+ -- Thomas Lange <lange@debian.org>  Fri, 08 Feb 2019 23:16:40 +0100
+
 fai (5.7) unstable; urgency=low
 
   * The config examples are now in a separate git repo. See README for
