--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+fai (5.9) unstable; urgency=low
+
+  * add UEFI support to fai-cd, fai-kvm
+  * add disk configs for UEFI
+  * new scripts fai-sed, fai-link
+
+ -- Thomas Lange <lange@debian.org>  Thu, 02 Jan 2020 22:23:36 +0100
+
+fai (5.8.7) unstable; urgency=low
+
+  * support apt keys in files called package_config/CLASS.gpg
+  * fai-mirror: new option -V
+
+ -- Thomas Lange <lange@debian.org>  Tue, 17 Sep 2019 14:48:21 +0200
+
 fai (5.8) unstable; urgency=low
 
   * fcopy: change the precedence of mode handling
