--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+fai (5.10) unstable; urgency=low
+
+  * fai-sed: change exit value if file was changed, add options -E, -n
+
+ -- Thomas Lange <lange@debian.org>  Sat, 05 Dec 2020 17:46:01 +0100
+
 fai (5.9) unstable; urgency=low
 
   * add UEFI support to fai-cd, fai-kvm
